<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="Instagram" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/ic_add"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_reels"
        android:icon="@drawable/ic_reel"
        android:title="@string/title_reels" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon_selector"
        android:title="@string/title_profile" />

</menu>